tests/ui/feature-gates/feature-gate-staged_api.stderr
error[E0734]: stability attributes may not be used outside of the standard library
  --> $DIR/feature-gate-staged_api.rs:1:1
   |
LL | #![stable(feature = "a", since = "3.3.3")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0734]: stability attributes may not be used outside of the standard library
  --> $DIR/feature-gate-staged_api.rs:8:1
   |
LL | #[stable(feature = "a", since = "3.3.3")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0734`.
